# annotated-mpnet

./: .gitignore  .isort.cfg  CHANGELOG.md  README.md  flex_attention_usage.md  flex_attn_readme.md  pretrain_mpnet_hf.py  pyproject.toml  ruff.toml  run_mpnet_train.sh  setup.py
annotated_mpnet/: __init__.py  constants.py
annotated_mpnet/data/: __init__.py  mpnet_data.py
annotated_mpnet/modeling/: __init__.py  mpnet_flex_for_pretraining.py  mpnet_for_pretraining.py  mpnet_for_pretraining_rope.py
annotated_mpnet/scheduler/: __init__.py  polynomial_decay_lr_scheduler.py
annotated_mpnet/scripts/: benchmark_flex_attention.py
annotated_mpnet/tracking/: __init__.py  meters.py
annotated_mpnet/transformer_modules/: __init__.py  flex_attention.py  flex_sentence_encoder.py  flex_sentence_encoder_layer.py  layer_norm.py  learned_positional_embedding.py  mpnet_flex_rope_attention.py  positional_embedding.py  rel_multihead_attention.py  rel_multihead_attention_rope.py  rope.py  rotary_embedding.py  sentence_encoder.py  sentence_encoder_layer.py  sentence_encoder_rope.py  sinusoidal_positional_embedding.py
annotated_mpnet/utils/: _build_helpers.py  perm_utils_fast.cpp  tensor_ops.py  utils.py
benchmarks/: analyze_benchmark.py  run_benchmark.sh
cli_tools/: __init__.py  convert_hf_model_to_mpnet.py  convert_pretrained_mpnet_to_hf_model.py  pretrain_mpnet.py
docs/: architecture.md  configuration.md  dev.md  training.md
tests/: __init__.py  dummy_tokenizer.py  test_conversion_config.py  test_data.py  test_flex_attention.py  test_pretrain.py  test_pretrain_smoke.py  test_rope_flex_two_stream_attention.py
